# bulletproofs-gadgets

./: Cargo.toml
src/: basic_r1cs.rs  gadget_bound_check.rs  gadget_not_equals.rs  gadget_osmt.rs  gadget_poseidon.rs  gadget_range_proof.rs  gadget_set_membership.rs  gadget_set_membership_1.rs  gadget_set_non_membership.rs  gadget_vsmt.rs  lib.rs  main.rs  mimc.rs  poseidon.rs  poseidon_constants.rs  r1cs_utils.rs  sbox.rs  scalar_utils.rs
tests/: gadget_bound_check.rs  gadget_not_equals.rs  gadget_osmt.rs  gadget_poseidon.rs  gadget_range_proof.rs  gadget_set_membership.rs  gadget_set_membership_1.rs  gadget_set_non_membership.rs  gadget_vsmt.rs
